@@ -1,3 +1,6 @@
+* Added better error handling when trying to install Neo4j which does not exist via Rake
+* Added better error handling when user forgot to create a session
+
 == 3.0.0.alpha.16
 * Impl rel_type for Neo4j::Relationship
 
